      compression is turned off for the device.  Thanks to Alec
      Wysoker (\PR{17191}).

      \item Asking for \code{methods()} on \code{"|"} returns only S3
      methods. See
      \url{https://stat.ethz.ch/pipermail/r-devel/2016-December/073476.html}.

      \item \code{seq("2", "5")} now works too, equivalently to
      \code{"2":"5"} and \code{seq.int()}.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The internal methods of \code{download.file()} and
      \code{url()} now report if they are unable to follow the
      redirection of a \samp{http://} URL to a \samp{https://} URL
      (rather than failing silently).
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item Enviromental variable \env{_R_CHECK_TESTS_NLINES_} controls
      how \command{R CMD check} reports failing tests (see §8 of the
      \sQuote{R Internals} manual).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{rep(x, times)} and \code{rep.int(x, times)} now both
      work also when \code{times} is larger than the maximal integer,
      including when it is of length greater than one. (\PR{16932})

      \item \code{vapply(x, *)} now works with long vectors \code{x}.
      (\PR{17174})

      \item \code{isS3method("is.na.data.frame")} and similar are
      correct now.  (\PR{17171})

      \item \code{grepRaw(<long>, <short>, fixed = TRUE)} now works,
      thanks to a patch by Mikko Korpela.  (\PR{17132})

      \item Package installation into a library where the package exists
      via symbolic link now should work wherever \code{\link{Sys.readlink}()}
      works, resolving \PR{16725}.

      \item \code{"Cincinnati"} was missing an \code{"n"} in the
      \code{precip} dataset.

      \item Fix buffer overflow vulnerability in \code{pdf()} when
      loading an encoding file.  Reported by Talos (TALOS-2016-0227).

      \item \code{getDLLRegisteredRoutines()} now produces its warning