@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2017-01-04 r71896) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-01-05 r71913) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -7111,17 +7111,17 @@ In pl$ab : partial match of 'ab' to 'abc'
 > 
 > ## seq() with NaN etc inputs now gives explicit error messages
 > try(seq(NaN))
-Error in seq.default(NaN) : 'from' cannot be NA, NaN or infinite
+Error in seq.default(NaN) : 'from' must be a finite number
 > try(seq(to = NaN))
 Error in seq.default(to = NaN) : 'to' must be a finite number
 > try(seq(NaN, NaN))
 Error in seq.default(NaN, NaN) : 'from' must be a finite number
 > try(seq.int(NaN))
-Error in seq.int(NaN) : 'from' cannot be NA, NaN or infinite
+Error in seq.int(NaN) : 'from' must be a finite number
 > try(seq.int(to = NaN))
-Error in seq.int(to = NaN) : 'to' cannot be NA, NaN or infinite
+Error in seq.int(to = NaN) : 'to' must be a finite number
 > try(seq.int(NaN, NaN))
-Error in seq.int(NaN, NaN) : 'from' cannot be NA, NaN or infinite
+Error in seq.int(NaN, NaN) : 'from' must be a finite number
 > ## R 3.0.1 gave messages from ':' or about negative-length vectors.
 > 
 > 
